crates/htui/tests/snapshots/settings__agents_empty.snap
---
source: crates/htui/tests/settings.rs
expression: frame
---
no workspace · no box · memory · 0 working · 0 waiting
 1 Settings
┌ Settings ────────────────────────────────────────────────────────────────────────────────────────┐
│ Agents                                                                                           │
│no agents registered                                                                              │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│j/k select · n new · e edit · m paths · t this box · r probe · i install · a authenticate         │
│quota latches per chat, r cannot refresh it                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
