crates/htui/tests/snapshots/settings__agents_paste_redirect.snap
---
source: crates/htui/tests/settings.rs
expression: rendered
---
name         transport billing      models default               enabled quota         on this box
loginable    acp       subscription 0      —                     yes     —             logging in…























link: https://h.invalid/o?redirect_uri=http%3A%2F%2F127.0.0.1%3A39879%2F&state=STATE-SENTINEL-9a2e
paste the address the browser could not open (127.0.0.1:39879):
› •••••••••••••••••••••••••••••  (29)
Enter sends · Esc cancels
