crates/htui/tests/snapshots/settings__agents_probed.snap
---
source: crates/htui/tests/settings.rs
expression: rendered
---
name         transport billing      models default               enabled quota         on this box
ready-on     acp       subscription 0      —                     yes     —             0.48.0
ready-off    acp       subscription 0      —                     yes     —             0.48.0 (off)
gone         acp       subscription 0      —                     yes     —             missing
needs-auth   acp       subscription 0      —                     yes     —             unauthenticat
broke        acp       subscription 0      —                     yes     —             failed
legacy       acp       subscription 0      —                     yes     —             9.9.9





















j/k select · n new · e edit · t this box · r probe · i install · a authenticate
quota latches per chat, r cannot refresh it
