crates/htui/tests/snapshots/settings__agents_quota.snap
---
source: crates/htui/tests/settings.rs
expression: rendered
---
name         transport billing      models default               enabled quota         on this box
windows      acp       subscription 0      —                     yes     62% to 09-08  0.48.0
spend-only   acp       subscription 0      —                     yes     $0.39 spent   0.48.0
no-blob      acp       subscription 0      —                     yes     —             0.48.0
unparsable   acp       subscription 0      —                     yes     —             0.48.0























j/k select · n new · e edit · m paths · t this box · r probe · i install · a authenticate
quota latches per chat, r cannot refresh it
