crates/htui/tests/snapshots/settings__agents_switched_off.snap
---
source: crates/htui/tests/settings.rs
expression: rendered
---
name         transport billing      models default               enabled quota         on this box
running      acp       subscription 0      —                     yes     —             0.48.0
vetoed       acp       subscription 0      —                     yes     —             switched off

























j/k select · n new · e edit · t this box · r probe · i install · a authenticate
quota latches per chat, r cannot refresh it
