crates/htui/tests/snapshots/settings__agents_unknown_row.snap
---
source: crates/htui/tests/settings.rs
expression: frame
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Settings
┌ Settings ────────────────────────────────────────────────────────────────────────────────────────┐
│ Agents                                                                                           │
│name       transport billing      models default               enabled quota         on this box  │
│agy        acp       subscription 11     gemini-3.7-flash-high yes     —             not probed   │
│claude     acp       subscription 0      —                     yes     —             not probed   │
│claude-cli cli       subscription 0      —                     yes     —             not probed   │
│kappa      acp       subscription 11     k1                    yes     —             not probed   │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│j/k select · n new · e edit · m paths · t this box · r probe · i install · a authenticate         │
│quota latches per chat, r cannot refresh it                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
